--- a/feedback.html
+++ b/feedback.html
@@ -74,31 +74,191 @@
           <div class="span3">
             <div class="well sidebar-nav">
               <ul class="nav nav-list">
+                <li class="nav-header">Feedback</li>
+                <li class="active"><a href="#">Question</a></li>
+                <li><a href="#">Problem</a></li>
+                <li><a href="#">Suggestion</a></li>
+                <li><a href="#">Praise</a></li>
+                <!--<li class="nav-header">Sidebar</li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
                 <li class="nav-header">Sidebar</li>
-                <li class="active"><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>용
-                <li><a href="#">Link</a></li>
-                <li class="nav-header">Sidebar</li>
                 <li><a href="#">Link</a></li>
                 <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li class="nav-header">Sidebar</li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>-->
               </ul>
             </div><!--/.well -->
           </div><!--/span-->
           <div class="span9">
             <div class="hero-unit">
-              <h1>--</h1>
-              <p>여기에 그래프  밑에는 내</p>
-             <!-- <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p> -->
-            </div> <!--
+
+              <div class="featurette">
+                <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+                <script type="text/javascript">
+                $(function () {
+                  var chart;
+                  $(document).ready(function() {
+
+                    var colors = Highcharts.getOptions().colors,
+                    categories = ['New Question', 'Q&A Waiting to adopt', 'Solved Q&A'],
+                    name = 'Customer Question',
+                    data = [{
+                      y: 55,
+                      color: colors[0],
+                      drilldown: {
+                        name: 'MSIE versions',
+                        categories: ['MSIE 6.0', 'MSIE 7.0', 'MSIE 8.0', 'MSIE 9.0'],
+                        data: [10.85, 7.35, 33.06, 2.81],
+                        color: colors[0]
+                      }
+                    }, {
+                      y: 21,
+                      color: colors[1],
+                      drilldown: {
+                        name: 'Firefox versions',
+                        categories: ['Firefox 2.0', 'Firefox 3.0', 'Firefox 3.5', 'Firefox 3.6', 'Firefox 4.0'],
+                        data: [0.20, 0.83, 1.58, 13.12, 5.43],
+                        color: colors[1]
+                      }
+                    }, {
+                      y: 11,
+                      color: colors[2],
+                      drilldown: {
+                        name: 'Chrome versions',
+                        categories: ['Chrome 5.0', 'Chrome 6.0', 'Chrome 7.0', 'Chrome 8.0', 'Chrome 9.0',
+                        'Chrome 10.0', 'Chrome 11.0', 'Chrome 12.0'],
+                        data: [0.12, 0.19, 0.12, 0.36, 0.32, 9.91, 0.50, 0.22],
+                        color: colors[2]
+                      }
+                    }];
+                    function setChart(name, categories, data, color) {
+                      chart.xAxis[0].setCategories(categories, false);
+                      chart.series[0].remove(false);
+                      chart.addSeries({
+                        name: name,
+                        data: data,
+                        color: color || 'white'
+                      }, false);
+                      chart.redraw();
+                    }
+
+                    chart = new Highcharts.Chart({
+                      chart: {
+                        renderTo: 'container4',
+                        type: 'column'
+                      },
+                      title: {
+                        text: 'Customer Q&A '
+                      },
+                      subtitle: {
+                        text: ''
+                      },
+                      xAxis: {
+                        categories: categories
+                      },
+                      yAxis: {
+                        title: {
+                          text: 'Total Count'
+                        }
+                      },
+                      plotOptions: {
+                        column: {
+                          cursor: 'pointer',
+                          point: {
+                            events: {
+                              click: function() {
+                                var drilldown = this.drilldown;
+                                if (drilldown) { // drill down
+                                  setChart(drilldown.name, drilldown.categories, drilldown.data, drilldown.color);
+                                } else { // restore
+                                  setChart(name, categories, data);
+                                }
+                              }
+                            }
+                          },
+                          dataLabels: {
+                            enabled: true,
+                            color: colors[0],
+                            style: {
+                              fontWeight: 'bold'
+                            },
+                            formatter: function() {
+                              return this.y +'';
+                            }
+                          }
+                        }
+                      },
+                      tooltip: {
+                        formatter: function() {
+                          var point = this.point,
+                          s = this.x +':<b>'+ this.y +'% market share</b><br/>';
+                          if (point.drilldown) {
+                            s += 'Click to view '+ point.category +' versions';
+                          } else {
+                            s += 'Click to return to browser brands';
+                          }
+                          return s;
+                        }
+                      },
+                      series: [{
+                        name: name,
+                        data: data,
+                        color: 'white'
+                      }],
+                      exporting: {
+                        enabled: false
+                      } 
+                    });
+});
+
+});
+</script>
+
+<script src="./assets/js/highcharts.js"></script>
+<script src="./assets/js/modules/exporting.js"></script>
+
+<div id="container4" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+<h2 class="featurette-heading">
+ Today's 고객의 질문 그래프 <br/> <span class="muted">새 질문, 답변채택을 기다리는 질문, 해결된 질문 </span>
+</h2>
+<!--<p class="lead">Donec ulla...</p>-->
+</div>
+              <!-- <h1>--</h1>
+              <p></p>-->
+              <!-- <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p> -->
+
+
+              </div>
+              <ul class="nav nav-tabs">
+                <li class="active">
+                  <a href="#">New Question</a>
+                </li>
+                <li><a href="#">Q&A Waiting to adopt</a></li>
+                <li><a href="#">Solved Q&A</a></li>
+              </ul>
+              <ul class="nav nav-tabs nav-stacked">
+               <li class="active">
+                <a href="#">New Question</a>
+              </li>
+              <li><a href="#">Q&A Waiting to adopt</a></li>
+              <li><a href="#">Solved Q&A</a></li>
+            </ul>
+            <div class="pagination">
+              <ul>
+                <li class="disabled"><a href="#">&laquo;</a></li>
+                <li class="active"><a href="#">1</a></li>
+                <li class="active"><a href="#">2</a></li>
+                <li class="active"><a href="#">3</a></li>
+                <li class="active"><a href="#">4</a></li>
+                <li class="active"><a href="#">5</a></li>
+               <li class="disabled"><a href="#">»</a></li>
+              </ul>
+            </div>
+            <!--
             <div class="row-fluid">
               <div class="span4">
                 <h2>Heading</h2>
@@ -131,7 +291,7 @@
                 <h2>Heading</h2>
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
                 <p><a class="btn" href="#">View details &raquo;</a></p>
-              </div><!/span--
+              </div><!/span-
             </div><!-row-->
           </div><!--/span-->
         </div><!--/row-->
