관리자 첫페이지 register.html 변경

--- a/about.html
+++ b/about.html
@@ -156,7 +156,7 @@
      
         <!-- START THE FEATURETTES -->
 
-        <div class="featurette">
+        <div class="featurette" style="padding-top:50px">
 
           <h2 class="featurette-heading">Why Salina ? </br><span class="muted" style="font-size:30px">당신이라는 개발자가 고객의 목소리(Feedback)를 분석적으로 들어야할때..</span></h2>
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
@@ -170,7 +170,7 @@
         <footer>
           <p>&copy; Company 2013 Salina - Mobile Application Feedback Solution.</p>
         </footer>
-      </div>
+      </div> <!--contain-->
 
     <!-- Le javascript
     ================================================== -->
