--- a/register.html
+++ b/register.html
@@ -139,27 +139,97 @@
         </div>
       </div>
 
-    <div class="container">
-       <h2 class="featurette-heading" style="margin-top:100px">
-          Register as a developer..<span class="muted" style="font-size:30px">를 소개합니다..</span></h2>
-       <!-- START THE FEATURETTES -->
+      <div class="container">
 
 
-       <hr class="featurette-divider">
 
-       <div class="featurette" style="padding-top:20px">
-        <img class="featurette-image pull-right" style="margin-top:-20px" src="./assets/img/register.jpg">
-        <h2 class="featurette-heading">Salina에 개발자 등록을 하세요. </br><span class="muted" style="font-size:30px">고객의 Feedback을 분석적으로 편하게 확인할수있습니다.</span></h2>
- 
-      </div>
+        <hr class="featurette-divider">
 
-      <hr class="featurette-divider">
+        <div class="featurette" style="padding-top:20px margin-top:10px">
+          <img class="featurette-image pull-right" style="margin-top:-20px" src="./assets/img/register.jpg">
+          <h2 class="featurette-heading">Salina에 개발자 등록을 하세요. </br><span class="muted" style="font-size:30px">고객의 Feedback을 분석적으로 편하게 확인할수있습니다.</span></h2>
+        </div>
+        <hr class="featurette-divider">
+        <div class="column main">
+          <noscript>
+            &lt;div class="fieldgroup"&gt;
+            &lt;div class="error"&gt;
+            &lt;p&gt;
+            GitHub does not support browsers with JavaScript disabled.&lt;br&gt;
+            We promise we'll behave.
+            &lt;/p&gt;
+            &lt;/div&gt;
+            &lt;/div&gt;
+          </noscript>
 
 
-        <footer>
-          <p>&copy; Company 2013 Salina - Mobile Application Feedback Solution.</p>
-        </footer>
-      </div> <!--contain-->
+
+          <form accept-charset="UTF-8" action="./Sign up · GitHub_files/Sign up · GitHub.html" autocomplete="off" id="signup_form" method="post"><div style="margin:0;padding:0;display:inline"><input name="authenticity_token" type="hidden" value="y1jehcovpP7opG6MgN021pn1eX1IQlwFR7PbfHj2tEE="></div>
+
+            <div class="hero-unit" style="padding:10px; width:600; background-color:#dbfcb6">
+              <h2 class="subdued">
+                Create your free personal account
+              </h2>
+            </div>
+            <div class="fieldgroup">
+              <div class="error">
+                <p class="text-warning">There were problems creating your account.</p>
+              </div>
+
+              <div class="fields">
+                <dl class="form errored">
+                  <dt><div class="fieldWithErrors"><label autocapitalize="off" data-autocheck-url="/signup_check/username" error="Login can&#39;t be blank" for="user_login" name="user[login]"><h3 class="text-error"> Username</h3></label></div></dt>
+                  <dd><div class="fieldWithErrors"><input autocapitalize="off" data-autocheck-url="/signup_check/username" error="Login can&#39;t be blank" id="user_login" name="user[login]" size="30" type="text" value=""></div></dd><dd class="text-warning">Login can't be blank</dd></dl>
+
+                  <dl class="form">
+                    <dt><div class="fieldWithErrors"><label autocapitalize="off" data-autocheck-url="/signup_check/email" for="user_email" hint="We promise we won&#39;t share your email with anyone." name="user[email]"><h3>Email Address<h3></label></div></dt>
+                    <dd><div class="fieldWithErrors"><input autocapitalize="off" data-autocheck-url="/signup_check/email" hint="We promise we won&#39;t share your email with anyone." id="user_email" name="user[email]" size="30" type="text"></div><p class="text-warning">We promise we won't share your email with anyone.</p></dd></dl>
+
+                    <dl class="form errored">
+                      <dt><div class="fieldWithErrors"><label data-autocheck-url="/signup_check/password" error="Password can&#39;t be blank and is too short (minimum is 7 characters)" for="user_password" hint="Must contain one lowercase letter, one number, and be at least 7 characters long." name="user[password]"><h3 class="text-error">Password<h3></label></div></dt>
+                      <dd><div class="fieldWithErrors"><input data-autocheck-url="/signup_check/password" error="Password can&#39;t be blank and is too short (minimum is 7 characters)" hint="Must contain one lowercase letter, one number, and be at least 7 characters long." id="user_password" name="user[password]" size="30" type="password" value=""></div></dd><dd class="text-warning">Password can't be blank and is too short (minimum is 7 characters)</dd></dl>
+
+                      <dl class="form">
+                        <dt><div class="fieldWithErrors"><label error="false" for="user_password_confirmation"><h3>Confirm Password<h3></label></div></dt>
+                        <dd><div class="fieldWithErrors"><input error="false" id="user_password_confirmation" name="user[password_confirmation]" size="30" type="password"></div></dd></dl>
+
+                      </div>
+               
+                    </div>
+
+                    <input id="user_plan" name="user[plan]" type="hidden" value="free">
+                    <input id="org_plan" name="org_plan" type="hidden">
+
+                    <div class="fieldgroup" style="display:none">
+                      <div class="fields">
+                        <dl class="form">
+                          <dt><div class="fieldWithErrors"><label error="false" for="user_coupon" name="user[coupon]">Coupon</label></div></dt>
+                          <dd><div class="fieldWithErrors"><input error="false" id="user_coupon" name="user[coupon]" size="30" type="text"></div></dd></dl>
+                        </div>
+                      </div>
+
+
+                      <div class="form-warning">
+                        <p>By clicking on "Create an account" below, you are agreeing to the
+                          <a href="http://help.github.com/terms" target="_blank">Terms of Service</a> and the
+                          <a href="http://help.github.com/privacy" target="_blank">Privacy Policy</a>.</p>
+                        </div>
+                        <div class="form-actions">
+                          <button type="button" class="btn btn btn-warning" data-loading-text="Loading...">Create an account</button>
+                        </div>
+
+                      </form>
+
+
+                    </div><!-- /.column.main -->
+
+                    <hr class="featurette-divider">
+
+
+                    <footer>
+                      <p>&copy; Company 2013 Salina - Mobile Application Feedback Solution.</p>
+                    </footer>
+                  </div> <!--contain-->
 
 
     <!-- Le javascript
