Salina 웹사이트 임시구성완료

--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
         <div class="featurette" style="padding-top:50px">
 
           <h2 class="featurette-heading">Why Salina ? </br><span class="muted" style="font-size:30px">당신이라는 개발자가 고객의 목소리(Feedback)를 분석적으로 들어야할때..</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">App을 출시한 개발자나 회사에서는 배포이후에 사용하는 사용자가 많을 수록 고객관리(CRM)의 이슈가 발생하게 됩니다. 그럴수록 App의 서비스를 발전시키고 혁신을 도모하기위해서는 고객의 목소리(Feedback)을 들을 필요가 있습니다. Salina는 App을 사용하는 고객이 Feedback을 즉각적으로 상황설명 필요없이 보낼수있게 도와줍니다. 그리고 App을 출시한 개발자나 회사에게 고객의 목소리(Feedback)들을 모아 분류화 시켜 정리된 view로 한눈에 볼수있게 도와줍니다.</p>
         </div>
 
         <hr class="featurette-divider">
