전체 페이지 링크 연결 수정

--- a/CustomerSatisfation.html
+++ b/CustomerSatisfation.html
@@ -43,8 +43,7 @@
     </head>
 
     <body>
-
-      <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar navbar-inverse navbar-fixed-top" >
         <div class="navbar-inner">
           <div class="container">
             <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -52,16 +51,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#">Salina - Mobile Feedback Solution</a>
+            <a class="brand" style="font-size:35px" href="app-home.html">Salina <br/> <b class = "brand" style="font-size:15px">mobile app feedback solution </b> </a>
             <div class="nav-collapse collapse">
-              <p class="navbar-text pull-right">
-                Logged in as <a href="#" class="navbar-link">Username</a>
-              </p>
               <ul class="nav">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="app-home.html">Home</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
                 <li><a href="UsersSessions.html">Users & Sessions</a></li>
-                <li><a href="ErrorBugs.html">Error & Bugs</a></li>
+                <li><a href="ErrorBugs.html">Errors & Bugs</a></li>
                 <li class="active"><a href="CustomerSatisfation.html">Customer Satisfaction</a></li>
               </ul>
             </div><!--/.nav-collapse -->
