--- a/download.html
+++ b/download.html
@@ -260,10 +260,10 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" style="font-size:35px" href="#">Salina <br/> <b class = "brand" style="font-size:15px">mobile app feedback solution </b> </a>
+            <a class="brand" style="font-size:35px" href="index.html">Salina <br/> <b class = "brand" style="font-size:15px">mobile app feedback solution </b> </a>
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li><a href="#">Introduce</a></li>
+                <li><a href="index.html">Introduce</a></li>
                 <li><a href="register.html">Register as a developer</a></li>
                 <li class="active"><a href="download.html">Download</a></li>
                 <li><a href="about.html">About</a></li>
