--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" style="font-size:35px" href="#">Salina <br/> <b class = "brand" style="font-size:15px">mobile app feedback solution </b> </a>
+            <a class="brand" style="font-size:35px" href="index.html">Salina <br/> <b class = "brand" style="font-size:15px">mobile app feedback solution </b> </a>
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li class="active"><a href="#">Introduce</a></li>
+                <li class="active"><a href="index.html">Introduce</a></li>
                 <li><a href="register.html">Register as a developer</a></li>
                 <li><a href="#contact">Download</a></li>
                 <li><a href="#about">About</a></li>
@@ -134,7 +134,7 @@
               <form class="navbar-form pull-right">
                 <input class="span2" type="text" placeholder="Email">
                 <input class="span2" type="password" placeholder="Password">
-                <button type="submit" class="btn">Sign in</button>
+                <button  class="btn" ><a href="developer.html">Sign in</a></button> <!--type="submit"-->
               </form>
             </div><!--/.nav-collapse -->
           </div>
