--- a/developer.html
+++ b/developer.html
@@ -140,35 +140,7 @@
       </div>
 
       
-      <div class="container"><!--
-        <div class="row-fluid">
-          <div class="span12" style="margin-top:90px">
-            Fluid 12
-            <div class="row-fluid">
-              <div class="span6">
-                Fluid 6
-                <div class="row-fluid">
-                  <div class="span6">Fluid 6</div>
-                  
-                </div>
-              </div>
-              <div class="row-fluid">
-                <div class="span6">
-                  <ul class="nav nav-tabs">
-                    <li class="active">
-                      <a href="#">  <img src="./assets/img/apps.jpg">&nbsp;&nbsp;&nbsp;&nbsp;  <strong> My Apps</strong>  &nbsp;&nbsp;&nbsp;&nbsp;  </a>
-                    </li>
-                  </ul>
-                  <div class="row-fluid">
-
-                    <div class="span6">Fluid 6</div>
-                    <div class="span6">Fluid 6</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>-->
+      <div class="container">
         <div class="container-fluid" style="margin-top:130px">
           <div class="row-fluid">
             <div class="span2" >
