Feedback상세페이지 임시틀(질문까지)

--- a/app-home.html
+++ b/app-home.html
@@ -78,7 +78,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" style="font-size:35px" href="app-home.html">Salina <br/> <b class = "brand" style="font-size:15px">mobile app feedback solution </b> </a>
+            <a class="brand" style="font-size:35px" href="index.html">Salina <br/> <b class = "brand" style="font-size:15px">mobile app feedback solution </b> </a>
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li class="active"><a href="app-home.html">Home</a></li>
