--- a/ErrorBugs.html
+++ b/ErrorBugs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Bootstrap, from Twitter</title>
+  <title>Salina - Mobile Application Feedback Solution</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -61,6 +61,9 @@
                 <li class="active"><a href="ErrorBugs.html">Errors & Bugs</a></li>
                 <li><a href="CustomerSatisfation.html">Customer Satisfaction</a></li>
               </ul>
+              <p class="navbar-text pull-right">
+                Logged in as <a href="#" class="navbar-link">Username</a>
+              </p>
             </div><!--/.nav-collapse -->
           </div>
         </div>
@@ -95,7 +98,7 @@
             <div class="hero-unit">
               <h1>--</h1>
               <p>여기에 그래프  밑에는 내</p>
-             <!-- <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p> -->
+              <!-- <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p> -->
             </div> <!--
             <div class="row-fluid">
               <div class="span4">
@@ -134,11 +137,11 @@
           </div><!--/span-->
         </div><!--/row-->
 
-        <hr>
+      <hr class="featurette-divider">
 
-        <footer>
-          <p>&copy; Company 2013</p>
-        </footer>
+      <footer>
+        <p>&copy; Company 2013 Salina - Mobile Application Feedback Solution.</p>
+      </footer>
 
       </div><!--/.fluid-container-->
 
