--- a/feedback.html
+++ b/feedback.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Bootstrap, from Twitter</title>
+  <title>Salina - Mobile Application Feedback Solution</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -61,246 +61,112 @@
                 <li><a href="ErrorBugs.html">Errors & Bugs</a></li>
                 <li><a href="CustomerSatisfation.html">Customer Satisfaction</a></li>
               </ul>
+              <p class="navbar-text pull-right">
+                Logged in as <a href="#" class="navbar-link">Username</a>
+              </p>
             </div><!--/.nav-collapse -->
           </div>
         </div>
       </div>
 
 
-      <div class="container-fluid">
+      <div class="container-fluid" style="margin-top:90px; margin-left:50px">
         <div class="row-fluid">
           <div class="span3">
-            <div class="well sidebar-nav">
-              <ul class="nav nav-list">
-                <li class="nav-header">Feedback</li>
-                <li class="active"><a href="#">Question</a></li>
-                <li><a href="#">Problem</a></li>
-                <li><a href="#">Suggestion</a></li>
-                <li><a href="#">Praise</a></li>
-                <!--<li class="nav-header">Sidebar</li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li class="nav-header">Sidebar</li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>-->
-              </ul>
-            </div><!--/.well -->
-          </div><!--/span-->
-          <div class="span9">
-            <div class="hero-unit">
+            <!--Sidebar content-->
+            <div class="row-fluid">
+              <div class="span4">
+                <ul class="thumbnails">
 
-              <div class="featurette">
-                <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-                <script type="text/javascript">
-                $(function () {
-                  var chart;
-                  $(document).ready(function() {
 
-                    var colors = Highcharts.getOptions().colors,
-                    categories = ['New Question', 'Q&A Waiting to adopt', 'Solved Q&A'],
-                    name = 'Customer Question',
-                    data = [{
-                      y: 55,
-                      color: colors[0],
-                      drilldown: {
-                        name: 'MSIE versions',
-                        categories: ['MSIE 6.0', 'MSIE 7.0', 'MSIE 8.0', 'MSIE 9.0'],
-                        data: [10.85, 7.35, 33.06, 2.81],
-                        color: colors[0]
-                      }
-                    }, {
-                      y: 21,
-                      color: colors[1],
-                      drilldown: {
-                        name: 'Firefox versions',
-                        categories: ['Firefox 2.0', 'Firefox 3.0', 'Firefox 3.5', 'Firefox 3.6', 'Firefox 4.0'],
-                        data: [0.20, 0.83, 1.58, 13.12, 5.43],
-                        color: colors[1]
-                      }
-                    }, {
-                      y: 11,
-                      color: colors[2],
-                      drilldown: {
-                        name: 'Chrome versions',
-                        categories: ['Chrome 5.0', 'Chrome 6.0', 'Chrome 7.0', 'Chrome 8.0', 'Chrome 9.0',
-                        'Chrome 10.0', 'Chrome 11.0', 'Chrome 12.0'],
-                        data: [0.12, 0.19, 0.12, 0.36, 0.32, 9.91, 0.50, 0.22],
-                        color: colors[2]
-                      }
-                    }];
-                    function setChart(name, categories, data, color) {
-                      chart.xAxis[0].setCategories(categories, false);
-                      chart.series[0].remove(false);
-                      chart.addSeries({
-                        name: name,
-                        data: data,
-                        color: color || 'white'
-                      }, false);
-                      chart.redraw();
-                    }
+                  <a href="app-home.html" class="thumbnail">
+                    <img src="./assets/img/seoulbus.jpg"  >
+                  </a>
 
-                    chart = new Highcharts.Chart({
-                      chart: {
-                        renderTo: 'container4',
-                        type: 'column'
-                      },
-                      title: {
-                        text: 'Customer Q&A '
-                      },
-                      subtitle: {
-                        text: ''
-                      },
-                      xAxis: {
-                        categories: categories
-                      },
-                      yAxis: {
-                        title: {
-                          text: 'Total Count'
-                        }
-                      },
-                      plotOptions: {
-                        column: {
-                          cursor: 'pointer',
-                          point: {
-                            events: {
-                              click: function() {
-                                var drilldown = this.drilldown;
-                                if (drilldown) { // drill down
-                                  setChart(drilldown.name, drilldown.categories, drilldown.data, drilldown.color);
-                                } else { // restore
-                                  setChart(name, categories, data);
-                                }
-                              }
-                            }
-                          },
-                          dataLabels: {
-                            enabled: true,
-                            color: colors[0],
-                            style: {
-                              fontWeight: 'bold'
-                            },
-                            formatter: function() {
-                              return this.y +'';
-                            }
-                          }
-                        }
-                      },
-                      tooltip: {
-                        formatter: function() {
-                          var point = this.point,
-                          s = this.x +':<b>'+ this.y +'% market share</b><br/>';
-                          if (point.drilldown) {
-                            s += 'Click to view '+ point.category +' versions';
-                          } else {
-                            s += 'Click to return to browser brands';
-                          }
-                          return s;
-                        }
-                      },
-                      series: [{
-                        name: name,
-                        data: data,
-                        color: 'white'
-                      }],
-                      exporting: {
-                        enabled: false
-                      } 
-                    });
-});
+                </ul>
+              </div>   
 
-});
-</script>
-
-<script src="./assets/js/highcharts.js"></script>
-<script src="./assets/js/modules/exporting.js"></script>
-
-<div id="container4" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
-<h2 class="featurette-heading">
- Today's 고객의 질문 그래프 <br/> <span class="muted">새 질문, 답변채택을 기다리는 질문, 해결된 질문 </span>
-</h2>
-<!--<p class="lead">Donec ulla...</p>-->
-</div>
-              <!-- <h1>--</h1>
-              <p></p>-->
-              <!-- <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p> -->
-
+              <div class="colum-fluid">
+                <div class="span10">
+                  <hr>
+                  <strong style="font-size:40px">Seoul Bus</strong>
+                </div>
+                
 
               </div>
-              <ul class="nav nav-tabs">
-                <li class="active">
-                  <a href="#">New Question</a>
-                </li>
-                <li><a href="#">Q&A Waiting to adopt</a></li>
-                <li><a href="#">Solved Q&A</a></li>
-              </ul>
-              <ul class="nav nav-tabs nav-stacked">
-               <li class="active">
-                <a href="#">New Question</a>
-              </li>
-              <li><a href="#">Q&A Waiting to adopt</a></li>
-              <li><a href="#">Solved Q&A</a></li>
-            </ul>
-            <div class="pagination">
-              <ul>
-                <li class="disabled"><a href="#">&laquo;</a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li class="active"><a href="#">2</a></li>
-                <li class="active"><a href="#">3</a></li>
-                <li class="active"><a href="#">4</a></li>
-                <li class="active"><a href="#">5</a></li>
-               <li class="disabled"><a href="#">»</a></li>
-              </ul>
             </div>
-            <!--
-            <div class="row-fluid">
-              <div class="span4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-              </div>--><!--/span--><!--
-              <div class="span4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-              </div>--><!--/span
-              <div class="span4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-              </div>/span
-            </div>/row--><!--
-            <div class="row-fluid">
-              <div class="span4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-              </div><!/span-
-              <div class="span4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-              </div><!-/span-
-              <div class="span4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-              </div><!/span-
-            </div><!-row-->
-          </div><!--/span-->
-        </div><!--/row-->
 
-        <hr>
+          </div>
+          <div class="span6" style="margin-left:0px; margin-right:30px">
+            <ul class="nav nav-tabs">
+              <li class="active" >
+                <a href="#"> <img src="./assets/img/q.jpg"><strong >&nbsp;&nbsp;질문</strong></a>
+              </li>
+              <li><a href="#"> <img src="./assets/img/s.jpg"><strong>&nbsp;&nbsp;건의</strong></a></li>
+              <li><a href="#"> <img src="./assets/img/p.jpg"><strong>&nbsp;&nbsp;문제</strong></a></li>
+              <li><a href="#"> <img src="./assets/img/h.jpg"><strong>&nbsp;&nbsp;칭찬</strong></a></li>
+            </ul>
+            <div class="hero-unit">
+              <h3> Today's </h3>
+              <table class="table">
+              <tr class="success">
+                <td><strong>오늘의 질문</strong> </td>
+                <td><strong>1,203</strong></td>
+              </tr>
+              <tr class="warning">
+                <td><strong>답변을 기다리는 질문</strong></td>
+                <td><strong>3,341</strong></td>
+              </tr>
+              <tr class="info">
+                <td><strong>해결된 질문</strong></td>
+                <td><strong>940</strong></td>
+              </tr>
+            </table>
+            </div>
 
-        <footer>
-          <p>&copy; Company 2013</p>
-        </footer>
+            <ul class="nav nav-tabs">
+              <li class="active">
+                <a href="#"><strong>새로운 질문</strong></a>
+              </li>
+              <li><a href="#"><strong>답변을 기다리는 Q&A</strong></a></li>
+              <li><a href="#"><strong>해결된 Q&A</strong></a></li>
+            </ul>
+            <ul class="nav nav-tabs nav-stacked">
+             <li><a href="#">질문 드립니다..</a></li>
+             <li><a href="#">사용법 관련 질문 입니다 !!! </a></li>
+             <li><a href="#">개발자님 궁금한게 있습니다 !! </a></li>
+             <li><a href="#">저기요...</a></li>
+             <li><a href="#">아 이거 이상한데-0-</a></li>
+             <li><a href="#">질문 </a></li>
+             <li><a href="#">1002번 노선도에서요 ~</a></li>
+             <li><a href="#">이해가 안되는게.. </a></li>
+             <li><a href="#">605번 버스 왜 안와요 ? </a></li>
+             <li><a href="#">아 진짜 개발자  </a></li>
 
-      </div><!--/.fluid-container-->
+
+           </ul>
+           <div class="pagination">
+            <ul>
+              <li class="disabled"><a href="#">&laquo;</a></li>
+              <li class="active"><a href="#">1</a></li>
+              <li class="active"><a href="#">2</a></li>
+              <li class="active"><a href="#">3</a></li>
+              <li class="active"><a href="#">4</a></li>
+              <li class="active"><a href="#">5</a></li>
+              <li class="disabled"><a href="#">»</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <footer>
+        <p>&copy; Company 2013 Salina - Mobile Application Feedback Solution.</p>
+      </footer>
+
+
+    </div><!--/.fluid-container-->
 
     <!-- Le javascript
     ================================================== -->
