new-app-home 페이지 추가해서 1차평가이후 기획된 설계화면 틀 구축

--- a/app-home.html
+++ b/app-home.html
@@ -105,7 +105,7 @@
 
 
                   <a href="app-home.html" class="thumbnail">
-                    <img src="./assets/img/seoulbus.jpg"  >
+                    .<img src="/assets/img/seoulbus.jpg"  >
                   </a>
 
                 </ul>
