--- a/Basic Statistics.html
+++ b/Basic Statistics.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Salina - Mobile Application Feedback Solution</title>
+ <title>Salina - Mobile Application Feedback Solution</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -52,7 +52,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" style="font-size:35px" href="index.html">Salina <br/> <b class = "brand" style="font-size:15px">mobile app feedback solution </b> </a>
+            <a class="brand" style="font-size:35px" href="app-home.html">Salina <br/> <b class = "brand" style="font-size:15px">mobile app feedback solution </b> </a>
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li><a href="new-app-home.html">Dash Board</a></li>
@@ -70,33 +70,31 @@
       </div>
 
 
-      <div class="container-fluid" style="margin-top:90px; margin-left:50px">
+      <div  class="container-fluid" style="margin-top:40px; margin-left:50px">
         <div class="row-fluid">
-          <div class="span3">
-            <!--Sidebar content-->
-            <div class="row-fluid">
-              <div class="span4">
-                <ul class="thumbnails">
-
-
-                  <a href="app-home.html" class="thumbnail">
-                    <img src="./assets/img/seoulbus.jpg"  >
-                  </a>
-
-                </ul>
-              </div>   
-
-              <div class="colum-fluid">
-                <div class="span10">
-                  <hr>
-                  <strong style="font-size:40px">Seoul Bus</strong>
-                </div>
-
-              </div>
-            </div>
-
-          </div>
-          <div class="span6" style="margin-left:0px; margin-right:30px">
+          <div class="span2">
+            <div class="well sidebar-nav">
+              <ul class="nav nav-list">
+                <li class="nav-header" style="color:#000000;font-size:20px;height:30px">User Feedback</li>
+                <li><a href="#">Overview</a></li>
+                <li class="active"><a href="#">Questions</a></li>
+                <li><a href="#">Suggestions</a></li>
+                <li><a href="#">Problems</a></li>
+                <li><a href="#">Evaluation</a></li>
+                <li><a href="#">Leader Boards</a></li>
+                <li class="nav-header" style="color:#F88017;font-size:20px;height:30px">System FeedBack</li>
+                <li><a href="#">Users & Sessions</a></li>
+                <li><a href="#">New VS Returning</a></li>
+                <li><a href="#">Device</a></li>
+                <li><a href="#">Platform</a></li>
+                <li><a href="#">App Version</a></li>
+                <li><a href="#">Country</a></li>
+                <li><a href="#">Network Type</a></li>
+                <li><a href="#">Events</a></li>
+              </ul>
+            </div><!--/.well -->
+          </div><!--/span-->
+          <div class="span9" style="margin-right:30px">
             <ul class="nav nav-tabs">
               <li class="active" >
                 <a href="#"> <img src="./assets/img/q.jpg"><strong >&nbsp;&nbsp;질문</strong></a>
@@ -156,16 +154,17 @@
             </ul>
           </div>
         </div>
-      </div>
+      
+          </div><!--/span-->
+        </div><!--/row-->
 
-      <hr class="featurette-divider">
+        <hr class="featurette-divider">
 
       <footer>
         <p>&copy; Company 2013 Salina - Mobile Application Feedback Solution.</p>
       </footer>
 
-
-    </div><!--/.fluid-container-->
+      </div><!--/.fluid-container-->
 
     <!-- Le javascript
     ================================================== -->
@@ -183,6 +182,10 @@
     <script src="./assets/js/bootstrap-collapse.js"></script>
     <script src="./assets/js/bootstrap-carousel.js"></script>
     <script src="./assets/js/bootstrap-typeahead.js"></script>
+    <script src="./assets/js/holder/holder.js"></script>
+    <script src="./assets/js/highcharts.js"></script>
+    <script src="./assets/js/highcharts-more.js"></script>
+    <script src="./assets/js/modules/exporting.js"></script>
 
   </body>
   </html>
