--- a/assets/www/html/feedback1.html
+++ b/assets/www/html/feedback1.html
@@ -107,9 +107,9 @@
 			}
 		</style>
 		
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css">
-		<script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+		<link rel="stylesheet" href="../css/jquery.mobile-1.3.1.min.css">
+		<script src="../js/jquery-1.10.0.min.js"></script>
+		<script src="../js/jquery.mobile-1.3.1.min.js"></script>
 
 	</head>
 	
