--- a/assets/www/html/send_feedbacks.html
+++ b/assets/www/html/send_feedbacks.html
@@ -9,9 +9,9 @@
 			}
 		</style>
 		
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css">
-		<script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+		<link rel="stylesheet" href="../css/jquery.mobile-1.3.1.min.css">
+		<script src="/www/js/jquery-1.10.0.min.js"></script>
+		<script src="/www/js/jquery.mobile-1.3.1.min.js"></script>
 
 	</head>
 	
@@ -27,7 +27,7 @@
 				<ul data-role="listview" data-inset="true">
 					<li data-icon="false">
 						<a href="./feedback1.html" data-ajax="false">
-							<img src="./profile-thumbnail.png">
+							<img src="./profile_thumbnail.png">
 							<h2>문제 > 메인 화면 > 로그인</h2>
 							<p>자동 로그인이 잘 안되요 ㅠㅠ</p>
 							<span class="ui-li-count">답변 0</span>
@@ -37,7 +37,7 @@
 					
 					<li data-icon="false">
 						<a href="feedback2.html">
-							<img src="./profile-thumbnail.png">
+							<img src="./profile_thumbnail.png">
 							<h2>질문 > 아이템샵 > 아이템 구매</h2>
 							<p>인앱 결제 할 때 신용카드나 휴대폰 결제 말고 다른 방법으로 결제 할 수 있는 건 없나요?? 계좌이체 같은거요</p>
 							<span class="ui-li-count">답변 1</span>
@@ -46,7 +46,7 @@
 					</li>
 					<li data-icon="false">
 						<a href="feedback2.html">
-							<img src="./profile-thumbnail.png">
+							<img src="./profile_thumbnail.png">
 							<h2>질문 > 아이템샵 > 아이템 구매</h2>
 							<p>인앱 결제 할 때 신용카드나 휴대폰 결제 말고 다른 방법으로 결제 할 수 있는 건 없나요?? 계좌이체 같은거요</p>
 							<span class="ui-li-count">답변 1</span>
@@ -55,7 +55,7 @@
 					</li>
 					<li data-icon="false">
 						<a href="feedback2.html">
-							<img src="./profile-thumbnail.png">
+							<img src="./profile_thumbnail.png">
 							<h2>질문 > 아이템샵 > 아이템 구매</h2>
 							<p>인앱 결제 할 때 신용카드나 휴대폰 결제 말고 다른 방법으로 결제 할 수 있는 건 없나요?? 계좌이체 같은거요</p>
 							<span class="ui-li-count">답변 1</span>
@@ -64,7 +64,7 @@
 					</li>
 					<li data-icon="false">
 						<a href="feedback2.html">
-							<img src="./profile-thumbnail.png">
+							<img src="./profile_thumbnail.png">
 							<h2>질문 > 아이템샵 > 아이템 구매</h2>
 							<p>인앱 결제 할 때 신용카드나 휴대폰 결제 말고 다른 방법으로 결제 할 수 있는 건 없나요?? 계좌이체 같은거요</p>
 							<span class="ui-li-count">답변 1</span>
@@ -73,7 +73,7 @@
 					</li>
 					<li data-icon="false">
 						<a href="feedback2.html">
-							<img src="./profile-thumbnail.png">
+							<img src="./profile_thumbnail.png">
 							<h2>질문 > 아이템샵 > 아이템 구매</h2>
 							<p>인앱 결제 할 때 신용카드나 휴대폰 결제 말고 다른 방법으로 결제 할 수 있는 건 없나요?? 계좌이체 같은거요</p>
 							<span class="ui-li-count">답변 1</span>
@@ -82,7 +82,7 @@
 					</li>
 					<li data-icon="false">
 						<a href="feedback2.html">
-							<img src="./profile-thumbnail.png">
+							<img src="./profile_thumbnail.png">
 							<h2>질문 > 아이템샵 > 아이템 구매</h2>
 							<p>인앱 결제 할 때 신용카드나 휴대폰 결제 말고 다른 방법으로 결제 할 수 있는 건 없나요?? 계좌이체 같은거요</p>
 							<span class="ui-li-count">답변 1</span>
@@ -91,7 +91,7 @@
 					</li>
 					<li data-icon="false">
 						<a href="feedback2.html">
-							<img src="./profile-thumbnail.png">
+							<img src="./profile_thumbnail.png">
 							<h2>질문 > 아이템샵 > 아이템 구매</h2>
 							<p>인앱 결제 할 때 신용카드나 휴대폰 결제 말고 다른 방법으로 결제 할 수 있는 건 없나요?? 계좌이체 같은거요</p>
 							<span class="ui-li-count">답변 1</span>
@@ -100,7 +100,7 @@
 					</li>
 					<li data-icon="false">
 						<a href="feedback2.html">
-							<img src="./profile-thumbnail.png">
+							<img src="./profile_thumbnail.png">
 							<h2>질문 > 아이템샵 > 아이템 구매</h2>
 							<p>인앱 결제 할 때 신용카드나 휴대폰 결제 말고 다른 방법으로 결제 할 수 있는 건 없나요?? 계좌이체 같은거요</p>
 							<span class="ui-li-count">답변 1</span>
